radio button alignment fixed (#535)

--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -248,7 +248,7 @@ input[type=file]{
 }
 
 @media screen and (max-width: 500px) {
-  .speechSettingDiv {
+  .decreaseSettingDiv {
     width: 70%;
   }
 }
